# ffi-gen-proto

./: README.md  analysis_options.yaml  build.yaml  pubspec.yaml
example/: pubspec.yaml
example/test_lib/: test_lib.h
lib/: builders.dart  ffi_gen.dart
lib/src/: annotations.dart  declarations.dart  library_generator.dart  mapper.dart  utils.dart
libclang/: analysis_options.yaml  pubspec.yaml
libclang/lib/: libclang.dart
libclang/lib/src/: libclang_bindings.dart  libclang_types.dart  util.dart
libclang_hooks/: CMakeLists.txt  libclang_hooks.c  libclang_hooks.h
